Update card font size to prevent wrapping

--- a/Demo/NetCorePluginDemoWebsite/wwwroot/css/site.css
+++ b/Demo/NetCorePluginDemoWebsite/wwwroot/css/site.css
@@ -209,3 +209,7 @@ body {
         font-size: 1.25rem;
     }
 }
+
+.card {
+    font-size: 15px;
+}
